--- a/aluraframe/client/post.html
+++ b/aluraframe/client/post.html
@@ -27,7 +27,7 @@
 
         <button class="btn btn-primary" type="submit" onclick="sendPost(event)">Enviar dados para servidor</button>
     </form>
-
+    <script src="js/app/services/HttpService.js"></script>
     <script>
 
         function sendPost(event) {
@@ -39,39 +39,22 @@
             let $ = document.querySelector.bind(document);
 
             let form = $(".form");
-            let formulario = {
+            let negociacao = {
                 data: form.data.value,
                 quantidade: form.quantidade.value,
                 valor: form.valor.value
             }
 
-            //construir o json
-            formJSON = JSON.stringify(formulario);
-
             //enviar o XMLHttpRequest
-            let xhr = new XMLHttpRequest();
-
-            xhr.open("POST", "/negociacoes");
-
-            xhr.onreadystatechange = () => {
-
-                if (xhr.readyState == 4) {
-
-                    if (xhr.status == 200) {
-                        inputData.value = '';
-                        inputQuantidade.value = 1;
-                        inputValor.value = 0.0;
-                        inputData.focus();
-                        alert('Negociação enviada com sucesso');
-                    } else {
-                        alert(`Não foi possível enviar a negociação: ${xhr.responseText}`);
-                    }
-                }
-            }
-
-            xhr.setRequestHeader("Content-type", "application/json");
-
-            xhr.send(formJSON);
+            new HttpService().post("/negociacoes", negociacao)
+            .then(() => {
+                form.data.value = '';
+                form.quantidade.value = 1;
+                form.valor.value = 0.0;
+                form.data.focus();
+                alert('Negociação enviada com sucesso');
+            })
+            .catch(erro => alert(`Não foi possível enviar a negociação: ${erro}`));
         }
     </script>
 </body>
